--- a/src/components/view/sources/sources.css
+++ b/src/components/view/sources/sources.css
@@ -1,4 +1,4 @@
-.sources {
+/* .sources {
     display: flex;
     flex-wrap: nowrap;
     width: 100%;
@@ -6,18 +6,30 @@
     overflow: auto;
     align-items: center;
     font: 300 1em 'Fira Sans', sans-serif;
-}
+} */
 
+.sources {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+    height: 55px;
+    overflow: hidden;
+    position: relative;
+    font: 300 1em 'Fira Sans', sans-serif;
+}
 .source__item {
     background: none;
     border: 2px solid #30c5ff;
     font: inherit;
     line-height: 1;
     margin: 0.5em;
-    padding: 1em 2em;
+    /* padding: 1em 2em; */
+    padding: 10px 0;
     color: #70d6ff;
     transition: 0.25s;
     cursor: pointer;
+    position: relative;
+    bottom: 110px;
 }
 
 .source__item:hover,
